Lab_6/k8s/kustomization/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloring-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloring-web
  template:
    metadata:
      labels:
        app: cloring-web
    spec:
      containers:
        - name: cloring-web
          image: cloring-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: uploads-data
              mountPath: /app/static/uploads
      volumes:
        - name: uploads-data
          persistentVolumeClaim:
            claimName: uploads-data-pvc
