Lab_6/k8s/kustomization/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloring-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cloring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloring-web
                port:
                  number: 5000
